
New updates are grouped by person (committer/merger), at the top of the file.
All entries are dated according to merging into the code in dev branch. THIS MEANS THE CODE MAY
NOT BE PRESENT IN THE STABLE BRANCH
For details of when a commit makes it into the stable branch see the ReleaseNotes file.


2016-10-13 niel
	Chg: Switch Smarty to bootstrap through lithium instead of just the libraries. Hopefully this
		will not cause more problems than it fixes.
2016-10-13 DariusIII
	Chg: Remove images/covers support from Trakt (they will no longer serve images after october 31)
	Fix: getBrowseRange query was missing group_name used in API extended parameter
2016-10-12 DariusIII
	Fix: Advanced search link in Gamma theme
2016-10-12 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.5.1


2016-10-11 DariusIII
	Fix: TinyMCE URL handling
	Chg: Add edit function to forumposts
2016-10-10 DariusIII
	Chg: Add release_naming_regex for a.b.movies to properly name DJ releases
2016-10-07 niel
	Chg: Issue 2263 - Out of memory issue checking RAR files. Add limit checkings to the extra
		options.
	Fix: Add missing setting for settings table.
2016-10-05 DariusIII
	Chg: Add caching to getPagerCount function to reduce load on indexers with many API calls
2016-10-03 niel
	Mrg: dev => Latest-testing to prepare for updating stable 0.x to v0.6.5.0


2016-09-26 niel
	Fix: Prevent TmdbAPI constructor from exiting hard. Instead it now returns null on failure
		(Fixes issue 2271).
2016-09-23 DariusIII
	Add: Support for per role category exclusions to admin->role edit page(Closes issue #1639).
2016-09-20 DariusIII
	Fix: Wrongly named autosize script in Alpha and Charisma themes (fixes issue #2268)
2016-09-20 niel
	Chg: Force php-yenc to use v1.2.2 or later, which fixes some issues with multi-part.
2016-09-16 niel
	Chg: Alter NzedbYenc adapter test to also check for version > 1.0.0 as that version is no longer
		compatible with the adapter's implementation.